--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-cookies": "^0.1.1",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-dragger-r": "0.0.12",
     "react-loadable": "^5.5.0",
     "react-refresh": "^0.8.3",
     "react-router-config": "^5.1.1",
